# onesentence

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CITATION.cff  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish-pypi.yml  run-tests.yml
src/onesentence/: __init__.py  analyze.py  cli.py  utils.py
src/sembr_check/: __init__.py  cli.py  utils.py
tests/: test_cli.py  test_integration.py  test_utils.py  utils.py
tests/data/: 1_true_pos.md  1_true_pos_fixed.md  2_true_neg.md  3_true_pos.rst  3_true_pos_fixed.rst  4_true_neg.rst  5_policy_compliant.md  6_soft_wrapped.md  6_soft_wrapped_fixed.md  7_structured.md  7_structured_fixed.md
