[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64", "setuptools-scm>=8" ]

[project]
name = "pre-commit-semantic-line-breaks"
description = "A Pre-commit hook for semantic line breaks(also called 'one sentence per line')"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
dependencies = [
  "fire>=0.7",
  "pysbd>=0.3.4",
]

scripts.sembr_check = "sembr_check.cli:trigger"

[dependency-groups]
dev = [
  "coverage>=7.6.12",
  "pytest>=8.3.5",
]

[tool.setuptools_scm]
root = "."

[tool.uv]
dev-dependencies = [
  "pre-commit>=4.0.0",
]
